--- a/olamilekan.html
+++ b/olamilekan.html
@@ -18,10 +18,14 @@
             <br> Mobile : 07084781418, 09057288091
         </P>
         <hr>
-        <h4><u>PROFILE/ EXPERIENCE</u></h4>
-        <p>A dynamic self-disciplined and result-oriented person with the wiliness to work in a challenging
-            environment and<br> ability to work independently and team player.
-        </p>
+        <table>
+            <tr> 
+                <td><h4><u>PROFILE/ EXPERIENCE</u></h4>
+                    <p>A dynamic self-disciplined and result-oriented person with the wiliness to work in a challenging
+                        environment and<br> ability to work independently and team player.
+                    </p></td>
+            <td> <img src="https://res.cloudinary.com/dcrjlvy1r/image/upload/v1566568954/olamilekan_gdglcz.jpg" alt="my image" width="120" height="120"></td> </tr>
+        </table>
         <h4> <u>EDUCATION</u></h4>
         <table>
             <tr>
