--- a/olamilekan.html
+++ b/olamilekan.html
@@ -26,7 +26,7 @@
             <section>
                 <h3> About Me</h3>
                 <p> I'm a frontend developer, WP enthusiast. Experienced with the Corel Graphics Suite, responsive
-                    design, social media management, and prototyping. </p>
+                    design, and social media management</p>
             </section>
 
             <section class="contact">
