add media queries for devices

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Olamilekan Resume</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet"  href="css/main.css">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
             <div class="skill">
                 <h3> Technical Skill</h3>
                 <ul>
-                    <li> HTML, CSS, jQuery <span class="test"></span> </li>
+                    <li> HTML, CSS, JavaScript <span class="test"></span> </li>
                     <li> <span> jQuery</span>
                         <div class="test2"></div>
                     </li>
