--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <input type="text" id="name" class="name" pattern="[A-Za-Z]{4,10}" title="minimum of 4 characters" placeholder="enter your name" required>
                         
                         <label for="email"> Email </label> 
-                        <input type="email" id="name" class="email" pattern="[a-z0-9]+@[a-z]+\.(com|net)" title="use the correct email format" placeholder="joe@gmail.com" required>
+                        <input type="email" id="name" class="email" pattern="[a-z0-9]+@[a-z]+\.(com|net)" title="use the correct email format" placeholder="olamilekan@gmail.com" required>
                         
                     </div>
                     <div class="input1">
